[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/text/Minecraft.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/MainMenuUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[node name="MainMenuUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 522.0
margin_top = 245.0
margin_right = 850.0
margin_bottom = 302.0

[node name="goToPlay" type="Button" parent="."]
margin_left = 616.0
margin_top = 128.0
margin_right = 922.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="goToShop" type="Button" parent="."]
margin_left = 616.0
margin_top = 216.0
margin_right = 922.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 3 )
text = "Shop"

[node name="goToSettings" type="Button" parent="."]
margin_left = 616.0
margin_top = 304.0
margin_right = 922.0
margin_bottom = 344.0
custom_fonts/font = SubResource( 4 )
text = "Settings"

[node name="goToGuide" type="Button" parent="."]
margin_left = 616.0
margin_top = 392.0
margin_right = 922.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 5 )
text = "How to Play"

[node name="exit" type="Button" parent="."]
margin_left = 616.0
margin_top = 480.0
margin_right = 922.0
margin_bottom = 520.0
custom_fonts/font = SubResource( 6 )
text = "Exit"

[node name="title" type="Label" parent="."]
margin_left = 40.0
margin_top = 72.0
margin_right = 546.0
margin_bottom = 352.0
rect_rotation = -6.6
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Iwas Singko!"
align = 1
valign = 1
autowrap = true

[connection signal="button_down" from="goToPlay" to="." method="_on_goToPlay_button_down"]
[connection signal="button_down" from="goToShop" to="." method="_on_goToShop_button_down"]
[connection signal="button_down" from="goToSettings" to="." method="_on_goToSettings_button_down"]
[connection signal="button_down" from="goToGuide" to="." method="_on_goToGuide_button_down"]
[connection signal="button_down" from="exit" to="." method="_on_exit_button_down"]
